[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/UI/ChangeSceneButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/scripts/UserInterface.gd" type="Script" id=2]
[ext_resource path="res://src/UI/RetryLevelButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/UI/QuitButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/UI/UI_Theme.tres" type="Theme" id=5]

[node name="UserInterface" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 5 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabel" type="Label" parent="."]
visible = false
anchor_left = 1.0
anchor_right = 1.0
margin_left = -200.0
margin_top = 50.0
margin_bottom = 90.0
text = "Score: %s"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ComboLabel" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -233.0
margin_top = 110.0
margin_right = -47.0
margin_bottom = 141.0
text = "%s Hit Combo!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseOverlay" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.603922, 0.807843, 0.921569, 0.270588 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseLabel" type="Label" parent="PauseOverlay"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -101.5
margin_top = 66.0
margin_right = 101.5
margin_bottom = 97.0
text = "Gaem is Paused"

[node name="VBoxContainer" type="VBoxContainer" parent="PauseOverlay"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -293.0
margin_top = -110.0
margin_right = 293.0
margin_bottom = 110.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChangeSceneButton" parent="PauseOverlay/VBoxContainer" instance=ExtResource( 1 )]
margin_right = 586.0
margin_bottom = 70.0
text = "Main Menu"
next_scene_path = "res://src/UI/MainScreen.tscn"

[node name="RetryLevelButton" parent="PauseOverlay/VBoxContainer" instance=ExtResource( 3 )]
margin_top = 74.0
margin_right = 586.0
margin_bottom = 145.0

[node name="QuitButton" parent="PauseOverlay/VBoxContainer" instance=ExtResource( 4 )]
margin_top = 149.0
margin_right = 586.0
margin_bottom = 220.0
